k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: second-server.com
      http:
        paths:
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: second-server-service
                port:
                  number: 8080
